--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --port 8087",
+    "dev": "webpack serve --port 8080",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "reginaldoboeke-test-web-components": "^1.0.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
@@ -26,6 +27,7 @@
     "react-refresh": "^0.10.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "typescript": "^4.4.3",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
